--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </header>
                 <p class="major">Welcome to the website of Wayne Ellis. I am a Software Architect, who loves web technology and writing about it, and enjoys building web applications.</p>
                 <p>Take a look around to learn more about me, my hobbies and my favoured technologies; the personal projects I am working on; and a selection of my blogs and articles.</p>                
-                <p>You can also connect with me on Twitter, Medium, StackOverflow, LinkedIn and Gihub, below.</p>
+                <p>You can also connect with me on Twitter, Medium, StackOverflow, LinkedIn and Github, below.</p>
             <div class="inner">
                 <ul class="icons">
                     <li><a href="https://twitter.com/codemwnci" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
