--- a/propertytrack-privacy.html
+++ b/propertytrack-privacy.html
@@ -3,11 +3,22 @@
 <body>
 <h1>Property Tracker - Privacy Policy</h1>
 <p>
-Property Tracker is a crowd-sourced property tracking system. 
-<br />
-When you vist the RightMove property listing pages, the extension will scan the page for all properties and their prices. These prices are saved to the PropertyTracker database (if they don't already exist). Once the prices are saved, the full list of prices for each property is downloaded and displayed on the screen (in the form of an up, down or sideways arrow icon, and a pop for each icon to show the prices list).
-<br />
-No personal information is recorded, and no tracking cookies are used. 
+  Property Tracker is a crowd-sourced property price tracking system. 
+  <br />
+  
+  <h2>How It Works</h2>
+  <ol>
+    <li>When you vist the RightMove property listing pages, the extension will scan the page for all properties and their prices. </li>
+    <li>These prices are saved to the PropertyTracker database (if they don't already exist). </li>
+    <li>Once the prices are saved, the full list of prices for each property is downloaded and displayed on the page (in the form of an up, down or sideways arrow icon, and a pop for each icon to show the prices list).
+  </ol>
+  <br />
+  
+  <h2>What Data Is Saved</h2>
+  The only data that is saved is the Property ID and the Price of that property.
+  
+  <h2>What about Personal Data?</h2>
+  No personal information is recorded, and no tracking cookies are used. 
 </p>
 </body>
 </html>
