Slight update - gitpod test

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                             engines, or even single page application frameworks, plus mobile first pushing toward single fluid pages,
                             and that is where GitHub Pages comes in. A simple place where I can share my static content, with a perfectly
                             suitable deployment pipeline, and if I ever do need serverside processing...then I can make simple REST
-                            calls to something like AWS lambda. Perfect. Let's see if the next iteration of this site stays with
+                            calls to something like Google Cloud Functions, or AWS lambda. Perfect. Let's see if the next iteration of this site stays with
                             the same stack.
                         </li>
                     </ul>
