--- a/xmas-quiz/index.html
+++ b/xmas-quiz/index.html
@@ -128,8 +128,8 @@
                 { id: 3, url: "Darkness-ChristmasTime.mp3", stopAt: 15453 },
                 { id: 4, url: "ShakinStevens-MerryXmasEveryone.mp3", stopAt: 8893 },
                 { id: 5, url: "Wham-LastXmas.mp3", stopAt: 18019 },
-                { id: 6, url: "SpiceGirls-WhoDoYouThinkYouAre.mp3", stopAt: 24764 },
-                { id: 7, url: "TheJam-TownCalledMalice.mp3", stopAt: 14303 },
+                //{ id: 6, url: "SpiceGirls-WhoDoYouThinkYouAre.mp3", stopAt: 24764 },
+                //{ id: 7, url: "TheJam-TownCalledMalice.mp3", stopAt: 14303 },
                 { id: 8, url: "AHA-TakeOnMe.mp3", stopAt: 34273 },
             ]
 
