--- a/index.html
+++ b/index.html
@@ -43,14 +43,15 @@
         <section class="spotlight style1 orient-right content-align-left image-position-center " id="aboutme">
             <div class="content">
                 <h2>About Me</h2>
-                <p>I am a Software Architect working for a FTSE 100 insurance company. I studied at Aberystwth University where I gained my
-                   Masters in Software Engineering, and most recently completed an MBA at Cardiff University. I live in Wales, UK, with my wife,
+                <p>I am a CIO working for a FTSE 100 insurance company. I studied at Aberystwth University where I gained my
+                   Masters in Software Engineering, and then went on to complete an MBA at Cardiff University. I live in Wales, UK, with my wife,
                    daughter and son, and spend most of my time either at work, with my family, or working on one of my many personal projects.
                 </p>
                 <p>As for hobbies, although I love sport and try to watch a bit now and then, I rarely get time to play these days! The sports
                    and hobbies I most enjoy include:
                    <ul>
-                       <li>Reading</li> 
+                       <li>Coding</li> 
+		       <li>Reading</li> 
                        <li>Golf</li> 
                        <li>Football</li> 
                        <li>Badminton</li> 
@@ -90,22 +91,19 @@
                         <span class="icon style2 major fa-map-marker"></span>
                         <h3>DevMap</h3>
                         <p>DevMap was a Christmas break project, playing around with Play! plus Google Maps. 
-                           I decided to create a simple web application that would allow developers etc to pin their position on the map against technologies they are interested in.</p>
-                           <a href="http://devmap.herokuapp.com" class="button wide smooth-scroll-middle special">Check out DevMap</a>
+                           I decided to create a simple web application that would allow developers etc to pin their position on the map against technologies they are interested in.</p>                           
                     </section>
                     <section>
                         <span class="icon style2 major fa-gamepad"></span>
-                        <h3>IsItMyGo</h3>
-                        <p>IsItMyGo is a work in progress. The site is intended to be a mixture of a Review site, Q&amp;A site and community hub.
-                           The name was borne from my board gaming days, when if a player was taking too long, one of the other players would say "Is It My Go yet?". 
-                        </p>
-                            <a href="http://www.isitmygo.co.uk" class="button wide smooth-scroll-middle special">Visit IsItMyGo</a>
+                        <h3>Turbo Trainer App</h3>
+                        <p>This is probably my most enjoyable, and definitely most challenging side project. 
+			   It is a desktop web app, that connects to an ANT+ enabled Smart Trainer, for cycling GPX routes with simulated gradient.</p>                        
+			   <a href="trainer-app.png" class="button wide smooth-scroll-middle special">See a Screenshot Here</a>
                     </section>
                     <section>
                         <span class="icon style2 major fa-heartbeat"></span>
                         <h3>WODRoom</h3>
-                        <p>WODRoom stands for Workout Of the Day Room. It was a prototype site I put together for a friend who wanted better information about workouts at hotels that standard hotel sites don't cover, such as nearby external facilities and food options.</p>
-                        <a href="http://www.wodroom.com" class="button wide smooth-scroll-middle special">Visit WODRoom</a>
+                        <p>WODRoom stands for Workout Of the Day Room. It was a prototype site I put together for a friend who wanted better information about workouts at hotels that standard hotel sites don't cover, such as nearby external facilities and food options.</p>                        
                     </section>
                     <section>
                         <span class="icon style2 major fa-facebook"></span>
