--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <h3>Turbo Trainer App</h3>
                         <p>This is probably my most enjoyable, and definitely most challenging side project. 
 			   It is a desktop web app, that connects to an ANT+ enabled Smart Trainer, for cycling GPX routes with simulated gradient.</p>                        
-			   <a href="trainer-app.png" class="button wide smooth-scroll-middle special">See a Screenshot Here</a>
+			   <a href="assets/img/trainer.png" class="button wide smooth-scroll-middle special">See a Screenshot Here</a>
                     </section>
                     <section>
                         <span class="icon style2 major fa-heartbeat"></span>
